--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello WORLD!</title>
+	<title>Hello world!</title>
 </head>
 <body>
-<h1>Hello people!</h1>
+<h1>hello world</h1>
 </body>
 </html>
